RESOLVED FIXED197579
REGRESSION (r244897): Caret may appear wider than normal after zooming to focus an editable element
https://bugs.webkit.org/show_bug.cgi?id=197579
Summary REGRESSION (r244897): Caret may appear wider than normal after zooming to foc...
Wenson Hsieh
Reported 2019-05-03 14:30:34 PDT
SSIA
Attachments
Patch (11.50 KB, patch)
2019-05-03 16:24 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-05-03 16:24:51 PDT
WebKit Commit Bot
Comment 2 2019-05-03 19:40:35 PDT
Comment on attachment 369016 [details] Patch Clearing flags on attachment: 369016 Committed r244945: <https://trac.webkit.org/changeset/244945>
WebKit Commit Bot
Comment 3 2019-05-03 19:40:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-05-03 19:41:14 PDT
Note You need to log in before you can comment on or make changes to this bug.